// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Made using should render made using component when ["html", "javascript"] is supplied 1`] = `
<div>
  <div
    class="made-using"
  >
    <span>
      html
    </span>
    <span>
      javascript
    </span>
  </div>
</div>
`;

exports[`Made using should render made using component when ["html"] is supplied 1`] = `
<div>
  <div
    class="made-using"
  >
    <span>
      html
    </span>
  </div>
</div>
`;

exports[`Made using should render made using component when [] is supplied 1`] = `<div />`;
